[gd_scene load_steps=17 format=3 uid="uid://ry50natwfd82"]

[ext_resource type="Script" path="res://Scenes/Scripts/help.gd" id="1_hhb11"]
[ext_resource type="Texture2D" uid="uid://2feemrq8mq5" path="res://Sprites/Player/PlayerFill.png" id="2_icpsg"]
[ext_resource type="Texture2D" uid="uid://btp3hahgdcsf6" path="res://Sprites/Player/ability1.png" id="2_v63im"]
[ext_resource type="Texture2D" uid="uid://wg6g3003pqr8" path="res://Sprites/Player/ability2.png" id="3_kfka8"]
[ext_resource type="Texture2D" uid="uid://cjixt1fjj6l40" path="res://Sprites/Player/Circle_300.png" id="3_os3eh"]
[ext_resource type="Texture2D" uid="uid://c8crsqg0o3mlb" path="res://Sprites/Enemies/projectile.png" id="4_1d104"]
[ext_resource type="Texture2D" uid="uid://mxceipx6qii4" path="res://Sprites/Enemies/wave.png" id="5_wa5vo"]
[ext_resource type="Texture2D" uid="uid://clwn3ahodhdf6" path="res://Sprites/Enemies/dasher.png" id="8_xbx6x"]
[ext_resource type="Texture2D" uid="uid://cl430lyy35lkw" path="res://Sprites/Enemies/gattlingGunner.png" id="9_gs353"]
[ext_resource type="Texture2D" uid="uid://1lcntghrxq8c" path="res://Sprites/Player/ability3.png" id="10_byb5s"]
[ext_resource type="Texture2D" uid="uid://dd8r33g0tg2yh" path="res://Sprites/Player/ability4.png" id="11_ie2ol"]
[ext_resource type="Texture2D" uid="uid://cxs7mgsaru2xj" path="res://Sprites/Player/PlayerBase.png" id="12_q2qxd"]
[ext_resource type="Texture2D" uid="uid://tkniconet2pk" path="res://Sprites/Player/abilityBase.png" id="13_necrr"]
[ext_resource type="Texture2D" uid="uid://csxr85ua61wrs" path="res://Sprites/Enemies/spikeBall.png" id="14_3vu1v"]
[ext_resource type="Texture2D" uid="uid://bbj43tv2yos7n" path="res://Sprites/Enemies/spikeBallBase.png" id="15_m0e12"]
[ext_resource type="Texture2D" uid="uid://cpfvm30acl7u0" path="res://Sprites/Enemies/laser.png" id="16_nd0ob"]

[node name="Help" type="Node2D"]
script = ExtResource("1_hhb11")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 2161.0
offset_bottom = 1250.0
color = Color(0, 0, 0, 1)

[node name="Buttons" type="Node2D" parent="."]

[node name="keyboard" type="Node2D" parent="."]
visible = false
position = Vector2(202, 29)

[node name="esc" type="Sprite2D" parent="keyboard"]
position = Vector2(411, 274)
texture = ExtResource("13_necrr")

[node name="Label4" type="Label" parent="keyboard/esc"]
offset_left = -44.0
offset_top = -219.0
offset_right = 190.0
offset_bottom = -50.0
theme_override_font_sizes/font_size = 60
text = "Pause
  |"

[node name="Label" type="Label" parent="keyboard/esc"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 50
text = "ESC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WASD" type="Node2D" parent="keyboard"]

[node name="ColorRect" type="ColorRect" parent="keyboard/WASD"]
offset_left = 598.0
offset_top = 308.0
offset_right = 926.0
offset_bottom = 532.0

[node name="ColorRect2" type="ColorRect" parent="keyboard/WASD/ColorRect"]
offset_left = 4.0
offset_top = 4.0
offset_right = 324.0
offset_bottom = 220.0
color = Color(0, 0, 0, 1)

[node name="Label5" type="Label" parent="keyboard/WASD"]
offset_left = 680.0
offset_top = 145.0
offset_right = 914.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 60
text = "Move
    |"

[node name="Label6" type="Label" parent="keyboard/WASD"]
offset_left = 922.0
offset_top = 255.0
offset_right = 1156.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 60
text = "  Item
    |"

[node name="W" type="Sprite2D" parent="keyboard/WASD"]
position = Vector2(762, 370)
texture = ExtResource("13_necrr")

[node name="Label" type="Label" parent="keyboard/WASD/W"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 60
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A" type="Sprite2D" parent="keyboard/WASD"]
position = Vector2(657, 475)
texture = ExtResource("13_necrr")

[node name="Label" type="Label" parent="keyboard/WASD/A"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 60
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="S" type="Sprite2D" parent="keyboard/WASD"]
position = Vector2(762, 475)
texture = ExtResource("13_necrr")

[node name="Label" type="Label" parent="keyboard/WASD/S"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 60
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="D" type="Sprite2D" parent="keyboard/WASD"]
position = Vector2(866, 475)
texture = ExtResource("13_necrr")

[node name="Label" type="Label" parent="keyboard/WASD/D"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 60
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="F" type="Sprite2D" parent="keyboard/WASD"]
position = Vector2(993, 476)
texture = ExtResource("13_necrr")

[node name="Label" type="Label" parent="keyboard/WASD/F"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 60
text = "F"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Arrow" type="Node2D" parent="keyboard"]
visible = false
position = Vector2(983, 227)

[node name="up" type="Sprite2D" parent="keyboard/Arrow"]
position = Vector2(762, 370)
texture = ExtResource("13_necrr")

[node name="Sprite2D" type="Sprite2D" parent="keyboard/Arrow/up"]
rotation = 4.71239
texture = ExtResource("8_xbx6x")

[node name="down" type="Sprite2D" parent="keyboard/Arrow"]
position = Vector2(762, 475)
texture = ExtResource("13_necrr")

[node name="Sprite2D" type="Sprite2D" parent="keyboard/Arrow/down"]
rotation = 1.5708
texture = ExtResource("8_xbx6x")

[node name="left" type="Sprite2D" parent="keyboard/Arrow"]
position = Vector2(866, 475)
texture = ExtResource("13_necrr")

[node name="Sprite2D" type="Sprite2D" parent="keyboard/Arrow/left"]
texture = ExtResource("8_xbx6x")

[node name="right" type="Sprite2D" parent="keyboard/Arrow"]
position = Vector2(657, 475)
texture = ExtResource("13_necrr")

[node name="Sprite2D" type="Sprite2D" parent="keyboard/Arrow/right"]
rotation = 3.14159
texture = ExtResource("8_xbx6x")

[node name="Space" type="ColorRect" parent="keyboard"]
offset_left = 785.0
offset_top = 652.0
offset_right = 1471.0
offset_bottom = 752.0

[node name="ColorRect2" type="ColorRect" parent="keyboard/Space"]
offset_left = 4.0
offset_top = 4.0
offset_right = 682.0
offset_bottom = 96.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="keyboard/Space"]
layout_mode = 0
offset_left = 246.0
offset_top = 10.0
offset_right = 427.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 60
text = "SPACE"

[node name="Label3" type="Label" parent="keyboard/Space"]
layout_mode = 0
offset_left = 213.0
offset_top = 91.0
offset_right = 447.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 60
text = "      |
Ability 4"

[node name="Shift" type="ColorRect" parent="keyboard"]
offset_left = 359.0
offset_top = 538.0
offset_right = 594.0
offset_bottom = 638.0

[node name="ColorRect2" type="ColorRect" parent="keyboard/Shift"]
offset_left = 4.0
offset_top = 4.0
offset_right = 231.0
offset_bottom = 96.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="keyboard/Shift"]
layout_mode = 0
offset_left = 35.0
offset_top = 8.0
offset_right = 246.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 60
text = "SHIFT"

[node name="Label2" type="Label" parent="keyboard/Shift"]
layout_mode = 0
offset_top = 94.0
offset_right = 234.0
offset_bottom = 263.0
theme_override_font_sizes/font_size = 60
text = "      |
Ability 3"

[node name="Abiliities" type="Node2D" parent="keyboard"]
position = Vector2(635, -104)

[node name="Label7" type="Label" parent="keyboard/Abiliities"]
offset_left = 709.0
offset_top = 240.0
offset_right = 1032.0
offset_bottom = 409.0
theme_override_font_sizes/font_size = 60
text = "Ability 1 / 2
            |"

[node name="ColorRect2" type="ColorRect" parent="keyboard/Abiliities"]
offset_left = 802.0
offset_top = 404.0
offset_right = 1035.0
offset_bottom = 541.0

[node name="ColorRect3" type="ColorRect" parent="keyboard/Abiliities/ColorRect2"]
offset_left = 4.0
offset_top = 4.0
offset_right = 229.0
offset_bottom = 133.0
color = Color(0, 0, 0, 1)

[node name="1" type="Sprite2D" parent="keyboard/Abiliities"]
position = Vector2(866, 475)
texture = ExtResource("13_necrr")

[node name="Label" type="Label" parent="keyboard/Abiliities/1"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 60
text = "["
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="2" type="Sprite2D" parent="keyboard/Abiliities"]
position = Vector2(970, 475)
texture = ExtResource("13_necrr")

[node name="Label" type="Label" parent="keyboard/Abiliities/2"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 60
text = "]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Controls"]
offset_left = 600.0
offset_top = 51.0
offset_right = 1211.0
offset_bottom = 772.0
theme_override_font_sizes/font_size = 40
text = "Mouse/Keyboard

WASD or arrow keys - move
Left Click or [ or 1- Ability 1
Right Click or ] or 2 - Ability 2
Shift or 3 - Ability 3
Space or 4 - Ability 4
F or 5 - Use item

ESC - pause
"

[node name="Label2" type="Label" parent="Controls"]
offset_left = 1300.0
offset_top = 51.0
offset_right = 1547.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 40
text = "Controller

Left Stick - move
A or Cross - Ability 1
B or Circle - Ability 2
X or Square - Ability 3
Y or Triangle - Ability 4
Right Trigger - Use Item

(letters based on xbox
controller)"

[node name="Abilities1" type="Node2D" parent="."]
visible = false
position = Vector2(-8, -20)

[node name="Label" type="Label" parent="Abilities1"]
offset_left = 747.0
offset_top = 43.0
offset_right = 1922.0
offset_bottom = 1091.0
theme_override_font_sizes/font_size = 40
text = "Ability 1
Destroys projectiles within 350 units of the player.
NOTE: lasers are not projectiles
Cooldown - 7 seconds

                                         Projectiles:



Ability 2
Jams all enemies within 350 units of the player for 3 seconds.
While jammed, enemies cannot attack and appear blue.
Cooldown - 7 seconds

                Normal:                                        Jammed:"
autowrap_mode = 2

[node name="A1variant" type="Node2D" parent="Abilities1"]
position = Vector2(-24, 13)
scale = Vector2(2, 2)

[node name="Wave" type="Sprite2D" parent="Abilities1/A1variant"]
position = Vector2(585, 222)
texture = ExtResource("5_wa5vo")

[node name="Projectile" type="Sprite2D" parent="Abilities1/A1variant"]
position = Vector2(669, 212.5)
texture = ExtResource("4_1d104")

[node name="A1" type="Node2D" parent="Abilities1"]
visible = false
position = Vector2(280, 120)
scale = Vector2(0.8, 0.8)

[node name="PlayerFill" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1185, 360)
texture = ExtResource("2_icpsg")

[node name="Circle300" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1185, 360)
texture = ExtResource("3_os3eh")

[node name="Projectile" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(988, 299)
texture = ExtResource("4_1d104")

[node name="Projectile2" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1011, 367)
texture = ExtResource("4_1d104")

[node name="Projectile3" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1022, 430)
texture = ExtResource("4_1d104")

[node name="Projectile5" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(933, 340)
texture = ExtResource("4_1d104")

[node name="Projectile6" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(952, 400)
texture = ExtResource("4_1d104")

[node name="Projectile4" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1038, 266)
texture = ExtResource("4_1d104")

[node name="Projectile7" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(944, 258)
texture = ExtResource("4_1d104")

[node name="Projectile8" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(912, 440)
texture = ExtResource("4_1d104")

[node name="Projectile9" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1046, 480)
texture = ExtResource("4_1d104")

[node name="Wave" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1444, 382)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave2" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1364, 343)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave3" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1335, 276)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave4" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1409, 299)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave5" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1355, 418)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave6" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1399, 444)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave7" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1408, 368)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave8" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1375, 239)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Wave9" type="Sprite2D" parent="Abilities1/A1"]
position = Vector2(1453, 311)
rotation = 3.83972
texture = ExtResource("5_wa5vo")

[node name="Ability1" type="Sprite2D" parent="Abilities1"]
position = Vector2(667, 113)
texture = ExtResource("2_v63im")

[node name="Ability2" type="Sprite2D" parent="Abilities1"]
position = Vector2(664, 625)
texture = ExtResource("3_kfka8")

[node name="A2" type="Node2D" parent="Abilities1"]
position = Vector2(-6, 25)
scale = Vector2(2, 2)

[node name="Dasher" type="Sprite2D" parent="Abilities1/A2"]
position = Vector2(441.5, 473)
texture = ExtResource("8_xbx6x")

[node name="GattlingGunner" type="Sprite2D" parent="Abilities1/A2"]
position = Vector2(567.5, 473.5)
texture = ExtResource("9_gs353")

[node name="A2Jam" type="Node2D" parent="Abilities1"]
position = Vector2(555, 34)
scale = Vector2(2, 2)

[node name="Dasher" type="Sprite2D" parent="Abilities1/A2Jam"]
position = Vector2(441.5, 473)
texture = ExtResource("8_xbx6x")

[node name="GattlingGunner" type="Sprite2D" parent="Abilities1/A2Jam"]
position = Vector2(567.5, 473.5)
texture = ExtResource("9_gs353")

[node name="Abilities2" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="Abilities2"]
offset_left = 739.0
offset_top = 23.0
offset_right = 1921.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 40
text = "Ability 3
The player is invincible and moves 1.5x faster for 2 seconds. While the ability is active, the player will appear slightly transparent
Cooldown - 10 seconds

                        Normal                       Ability active


Ability 4
Destroys all enemies and projectiles within 300 units of the player.
Cooldown - 50 seconds"
autowrap_mode = 2

[node name="Ability3" type="Sprite2D" parent="Abilities2"]
position = Vector2(671, 104)
texture = ExtResource("10_byb5s")

[node name="Ability4" type="Sprite2D" parent="Abilities2"]
position = Vector2(643, 662)
texture = ExtResource("11_ie2ol")

[node name="Heart" type="Node2D" parent="Abilities2"]
modulate = Color(1, 1, 1, 0.6)
position = Vector2(1490, 476)

[node name="PlayerBase" type="Sprite2D" parent="Abilities2/Heart"]
texture = ExtResource("12_q2qxd")

[node name="PlayerFill" type="Sprite2D" parent="Abilities2/Heart"]
texture = ExtResource("2_icpsg")

[node name="Heart2" type="Node2D" parent="Abilities2"]
position = Vector2(1054, 476)

[node name="PlayerBase" type="Sprite2D" parent="Abilities2/Heart2"]
texture = ExtResource("12_q2qxd")

[node name="PlayerFill" type="Sprite2D" parent="Abilities2/Heart2"]
texture = ExtResource("2_icpsg")

[node name="Basics" type="Node2D" parent="."]
visible = false
position = Vector2(-52, -24)

[node name="Label" type="Label" parent="Basics"]
offset_left = 558.0
offset_top = 60.0
offset_right = 1935.0
offset_bottom = 366.0
theme_override_font_sizes/font_size = 40
text = "Your objective is to survive as many waves as possible. At the start of each wave, enemies will spawn. They will not be able to move or attack for 5 seconds. During this time, you can move around, but you cannot cast abilities. Once enemies begin moving, you will need to survive for 30 seconds. Once you complete the wave, you can choose an upgrade."
autowrap_mode = 2

[node name="Wave" type="Node2D" parent="Basics"]
position = Vector2(1263, 420)

[node name="Label2" type="Label" parent="Basics/Wave"]
offset_left = 152.0
offset_top = 3.0
offset_right = 678.0
offset_bottom = 348.0
theme_override_font_sizes/font_size = 40
text = "This meter will appear in the top left of the sceen. It will show how much time is left in the wave / how much time until enemies start moving."
autowrap_mode = 2

[node name="Label" type="Label" parent="Basics/Wave"]
offset_right = 120.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 30
text = "1"
horizontal_alignment = 1

[node name="TimeBar" type="Node2D" parent="Basics/Wave"]
position = Vector2(23, 53)

[node name="Top" type="ColorRect" parent="Basics/Wave/TimeBar"]
offset_right = 75.0
offset_bottom = 4.0

[node name="Bot" type="ColorRect" parent="Basics/Wave/TimeBar"]
offset_top = 220.0
offset_right = 75.0
offset_bottom = 224.0

[node name="Label" type="Label" parent="Basics/Wave/TimeBar/Bot"]
layout_mode = 0
offset_left = -22.0
offset_top = 4.0
offset_right = 97.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 30
text = "15s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bar" type="ColorRect" parent="Basics/Wave/TimeBar"]
offset_left = 62.0
offset_top = 220.0
offset_right = 112.0
offset_bottom = 326.0
rotation = 3.14159

[node name="Item" type="Sprite2D" parent="Basics"]
position = Vector2(607, 944)
texture = ExtResource("13_necrr")

[node name="Label4" type="Label" parent="Basics/Item"]
offset_left = 76.0
offset_top = -77.0
offset_right = 1348.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 40
text = "Sometimes you will have the option to take an item instead of an upgrade. The number in the bottom left indicates how many times you can use the item."
autowrap_mode = 2

[node name="Label" type="Label" parent="Basics/Item"]
offset_left = -46.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 70
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Basics/Item"]
offset_left = -13.0
offset_top = -18.0
offset_right = 80.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Abilities" type="Node2D" parent="Basics"]
position = Vector2(604, 460)

[node name="AbilityBase" type="Sprite2D" parent="Basics/Abilities"]
texture = ExtResource("13_necrr")

[node name="Ability1" type="Sprite2D" parent="Basics/Abilities/AbilityBase"]
texture = ExtResource("2_v63im")

[node name="AbilityBase2" type="Sprite2D" parent="Basics/Abilities"]
position = Vector2(0, 100)
texture = ExtResource("13_necrr")

[node name="Ability2" type="Sprite2D" parent="Basics/Abilities/AbilityBase2"]
texture = ExtResource("3_kfka8")

[node name="AbilityBase3" type="Sprite2D" parent="Basics/Abilities"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
position = Vector2(0, 200)
texture = ExtResource("13_necrr")

[node name="Ability3" type="Sprite2D" parent="Basics/Abilities/AbilityBase3"]
texture = ExtResource("10_byb5s")

[node name="AbilityBase4" type="Sprite2D" parent="Basics/Abilities"]
position = Vector2(0, 300)
texture = ExtResource("13_necrr")

[node name="Ability4" type="Sprite2D" parent="Basics/Abilities/AbilityBase4"]
texture = ExtResource("11_ie2ol")

[node name="ColorRect" type="ColorRect" parent="Basics/Abilities"]
offset_left = -49.0
offset_top = 195.0
offset_right = 50.0
offset_bottom = 250.0
color = Color(1, 1, 1, 0.415686)

[node name="Label3" type="Label" parent="Basics/Abilities"]
offset_left = 79.0
offset_top = -36.0
offset_right = 614.0
offset_bottom = 367.0
theme_override_font_sizes/font_size = 40
text = "These icons represent your abilities. When they are on cooldown, they will be grayed out and have a meter over them indicating how much time is left."
autowrap_mode = 2

[node name="Health_Enemies" type="Node2D" parent="."]
visible = false
position = Vector2(5, 120)

[node name="Health" type="Node2D" parent="Health_Enemies"]
position = Vector2(564, 47)

[node name="Label" type="Label" parent="Health_Enemies/Health"]
offset_left = 59.0
offset_top = -24.0
offset_right = 1341.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 40
text = "You have a total of 5 health. This column of hearts indicates your health with filled in hearts representing your current amount of health.

The heart representing the player will also drain as you take damage."
autowrap_mode = 2

[node name="bar" type="Node2D" parent="Health_Enemies/Health"]

[node name="PlayerBase" type="Sprite2D" parent="Health_Enemies/Health/bar"]
texture = ExtResource("12_q2qxd")

[node name="PlayerFill" type="Sprite2D" parent="Health_Enemies/Health/bar"]
position = Vector2(0, 50)
texture = ExtResource("2_icpsg")

[node name="PlayerFill2" type="Sprite2D" parent="Health_Enemies/Health/bar"]
position = Vector2(0, 100)
texture = ExtResource("2_icpsg")

[node name="PlayerFill3" type="Sprite2D" parent="Health_Enemies/Health/bar"]
position = Vector2(0, 150)
texture = ExtResource("2_icpsg")

[node name="player" type="Node2D" parent="Health_Enemies/Health"]
position = Vector2(311, 301)

[node name="PlayerBase" type="Sprite2D" parent="Health_Enemies/Health/player"]
texture = ExtResource("12_q2qxd")

[node name="ColorRect" type="ColorRect" parent="Health_Enemies/Health/player"]
clip_children = 1
offset_left = 22.0
offset_top = 20.0
offset_right = 66.0
offset_bottom = 42.0
rotation = 3.14159

[node name="PlayerFill" type="Sprite2D" parent="Health_Enemies/Health/player/ColorRect"]
position = Vector2(22, 20)
rotation = 3.14159
texture = ExtResource("2_icpsg")

[node name="Colors" type="Node2D" parent="Health_Enemies"]

[node name="red" type="Node2D" parent="Health_Enemies/Colors"]

[node name="spikeball" type="Node2D" parent="Health_Enemies/Colors/red"]
position = Vector2(1559, 753)

[node name="SpikeBall" type="Sprite2D" parent="Health_Enemies/Colors/red/spikeball"]
texture = ExtResource("14_3vu1v")

[node name="SpikeBallBase" type="Sprite2D" parent="Health_Enemies/Colors/red/spikeball"]
texture = ExtResource("15_m0e12")

[node name="ColorRect" type="ColorRect" parent="Health_Enemies/Colors/red/spikeball"]
offset_left = -526.0
offset_top = -6.0
offset_right = -286.0
offset_bottom = 31.0

[node name="Projectile" type="Sprite2D" parent="Health_Enemies/Colors/red"]
position = Vector2(617, 761)
scale = Vector2(2, 2)
texture = ExtResource("4_1d104")

[node name="Wave" type="Sprite2D" parent="Health_Enemies/Colors/red"]
position = Vector2(746, 779)
scale = Vector2(2, 2)
texture = ExtResource("5_wa5vo")

[node name="Laser" type="Sprite2D" parent="Health_Enemies/Colors"]
position = Vector2(1047, 765)
texture = ExtResource("16_nd0ob")

[node name="Label" type="Label" parent="Health_Enemies/Colors"]
offset_left = 606.0
offset_top = 517.0
offset_right = 1922.0
offset_bottom = 790.0
theme_override_font_sizes/font_size = 40
text = "Anything that can damage you will appear red. 

Projectiles                         Lasers                              Enemies"
